--- a/SisMEC/Views/Clientes/Delete.cshtml
+++ b/SisMEC/Views/Clientes/Delete.cshtml
@@ -4,54 +4,64 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+@{ 
+    Layout = null;
+}
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Cliente</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClienteNome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClienteNome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClienteCPF)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClienteCPF)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClienteEmail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClienteEmail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClienteTelefone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClienteTelefone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClienteEndereco)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClienteEndereco)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Carro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Carro.CarroMarca)
-        </dd class>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ClienteId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">EXCLUIR</h4>
+        </div>
+
+        <div class="modal-body">
+
+            <h3>Deseja mesmo excluir este cliente?</h3>
+
+            <table class="table table-borderless">
+                <tbody>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ClienteNome)</th>
+                        <td>@Html.DisplayFor(model => model.ClienteNome)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ClienteCPF)</th>
+                        <td> @Html.DisplayFor(model => model.ClienteCPF)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ClienteEmail)</th>
+                        <td> @Html.DisplayFor(model => model.ClienteEmail)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ClienteTelefone)</th>
+                        <td> @Html.DisplayFor(model => model.ClienteTelefone)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ClienteEndereco)</th>
+                        <td>@Html.DisplayFor(model => model.ClienteEndereco)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.Carro)</th>
+                        <td>@Html.DisplayFor(model => model.Carro.CarroMarca)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div><!---modal body-->
+            <div class="modal-footer">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    <form asp-action="Delete">
+                        <input type="hidden" asp-for="ClienteId" />
+                        <input type="submit" value="Excluir" class="btn btn-danger"/> 
+                        <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                    </form>
+                }
+            </div>
+        </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+<script>
+    function tirar() {
+            $(".modal-backdrop").remove();
+        }
+</script>
