--- a/SisMEC/Views/Contatos/Index.cshtml
+++ b/SisMEC/Views/Contatos/Index.cshtml
@@ -14,9 +14,15 @@
 <body>
     <main class="container">
         <center>
-        <img src="~/images/logosis.png" alt="Logo SisMecânica" id="logo" width=300 height=100>
+            <img src="~/images/logosis.png" alt="Logo SisMecânica" id="logo" width=300 height=100>
         </center>
         <h2 align="center">SOLICITE SEU CADASTRO</h2>
+        <h3 align="center">Whatsapp - 99111-9898</h3>
+        <h3 align="center">E-mail - contato@sismecanica.com</h3>
+        <br>
+        <center>
+            <a class="btn btn-success" asp-area="" asp-controller="Account" asp-action="Login">Voltar para o Login</a>
+        </center>
     </main>
 </body>
 </html>
