--- a/SisMEC/Views/Clientes/Create.cshtml
+++ b/SisMEC/Views/Clientes/Create.cshtml
@@ -4,51 +4,70 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+@{
+    Layout = null;
+}
 
-<h4>Cliente</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ClienteNome" class="control-label"></label>
-                <input asp-for="ClienteNome" class="form-control" />
-                <span asp-validation-for="ClienteNome" class="text-danger"></span>
+<div class="modal-dialog">
+    <div class="modal-content">
+        @using (Html.BeginForm())
+        {
+            <div class="modal-header">
+                <h4 class="modal-title">CADASTRAR</h4>
             </div>
-            <div class="form-group">
-                <label asp-for="ClienteCPF" class="control-label"></label>
-                <input asp-for="ClienteCPF" class="form-control" />
-                <span asp-validation-for="ClienteCPF" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClienteEmail" class="control-label"></label>
-                <input asp-for="ClienteEmail" class="form-control" />
-                <span asp-validation-for="ClienteEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClienteTelefone" class="control-label"></label>
-                <input asp-for="ClienteTelefone" class="form-control" />
-                <span asp-validation-for="ClienteTelefone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClienteEndereco" class="control-label"></label>
-                <input asp-for="ClienteEndereco" class="form-control" />
-                <span asp-validation-for="ClienteEndereco" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CarroId" class="control-label"></label>
-                <select asp-for="CarroId" class ="form-control" asp-items="ViewBag.CarroId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+
+            @Html.AntiForgeryToken()
+            <form asp-action="Create">
+                <div class="modal-body">
+
+                    <table class="table table-borderless">
+                        <tbody>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ClienteNome" class="control-label"></label></th>
+                                <td><input asp-for="ClienteNome" class="form-control" /></td>
+                                <td><span asp-validation-for="ClienteNome" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ClienteCPF" class="control-label"></label></th>
+                                <td><input asp-for="ClienteCPF" class="form-control" /></td>
+                                <td><span asp-validation-for="ClienteCPF" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ClienteEmail" class="control-label"></label></th>
+                                <td><input asp-for="ClienteEmail" class="form-control" /></td>
+                                <td><span asp-validation-for="ClienteEmail" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ClienteTelefone" class="control-label"></label></th>
+                                <td><input asp-for="ClienteTelefone" class="form-control" /></td>
+                                <td><span asp-validation-for="ClienteTelefone" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ClienteEndereco" class="control-label"></label></th>
+                                <td><input asp-for="ClienteEndereco" class="form-control" /></td>
+                                <td><span asp-validation-for="ClienteEndereco" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="CarroId" class="control-label"></label></th>
+                                <td><select asp-for="CarroId" class="form-control" asp-items="ViewBag.CarroId"></select></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="modal-footer">
+                    <div class="form-group">
+                        <input type="submit" value="Salvar" class="btn btn-primary" />
+                        <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                    </div>
+                </div>
+            </form>
+        }
     </div>
 </div>
+<script>
+    function tirar() {
+        $(".modal-backdrop").remove();
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+    }
+</script>
