--- a/SisMEC/Views/Produtos/Details.cshtml
+++ b/SisMEC/Views/Produtos/Details.cshtml
@@ -4,39 +4,46 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+@{
+    Layout = null;
+}
 
-<div>
-    <h4>Produto</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProdutoNome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProdutoNome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProdutoQuantidade)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProdutoQuantidade)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProdutoValor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProdutoValor)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProdutoDataValidade)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProdutoDataValidade)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ProdutoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Detalhes do Produto</h4>
+        </div>
+        <div class="modal-body">
+
+            <table class="table table-borderless">
+                <tbody>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ProdutoNome)</th>
+                        <td>@Html.DisplayFor(model => model.ProdutoNome)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ProdutoQuantidade)</th>
+                        <td> @Html.DisplayFor(model => model.ProdutoQuantidade)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ProdutoValor)</th>
+                        <td> @Html.DisplayFor(model => model.ProdutoValor)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ProdutoDataValidade)</th>
+                        <td> @Html.DisplayFor(model => model.ProdutoDataValidade)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+            <div class="modal-footer">
+                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+
+    <script>
+    function tirar() {
+        $(".modal-backdrop").remove();
+    }
+    </script>
