--- a/SisMEC/Views/Produtos/Edit.cshtml
+++ b/SisMEC/Views/Produtos/Edit.cshtml
@@ -4,43 +4,55 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+@{
+    Layout = null;
+}
 
-<h4>Produto</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProdutoId" />
-            <div class="form-group">
-                <label asp-for="ProdutoNome" class="control-label"></label>
-                <input asp-for="ProdutoNome" class="form-control" />
-                <span asp-validation-for="ProdutoNome" class="text-danger"></span>
+<div class="modal-dialog">
+    <div class="modal-content">
+        @using (Html.BeginForm())
+        {
+            <div class="modal-header">
+                <h4 class="modal-title">Editar</h4>
             </div>
-            <div class="form-group">
-                <label asp-for="ProdutoQuantidade" class="control-label"></label>
-                <input asp-for="ProdutoQuantidade" class="form-control" />
-                <span asp-validation-for="ProdutoQuantidade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProdutoValor" class="control-label"></label>
-                <input asp-for="ProdutoValor" class="form-control" />
-                <span asp-validation-for="ProdutoValor" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProdutoDataValidade" class="control-label"></label>
-                <input asp-for="ProdutoDataValidade" class="form-control" />
-                <span asp-validation-for="ProdutoDataValidade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+            @Html.AntiForgeryToken()
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+            <form asp-action="Edit">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ProdutoId" />
+                <div class="modal-body">
+                    <table class="table table-borderless">
+                        <tbody>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ProdutoNome" class="control-label"></label></th>
+                                <td><input asp-for="ProdutoNome" class="form-control" /></td>
+                                <td><span asp-validation-for="ProdutoNome" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ProdutoQuantidade" class="control-label"></label></th>
+                                <td><input asp-for="ProdutoQuantidade" class="form-control" /></td>
+                                <td><span asp-validation-for="ProdutoQuantidade" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ProdutoValor" class="control-label"></label></th>
+                                <td><input asp-for="ProdutoValor" class="form-control" /></td>
+                                <td><span asp-validation-for="ProdutoValor" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ProdutoDataValidade" class="control-label"></label></th>
+                                <td><input asp-for="ProdutoDataValidade" class="form-control" /></td>
+                                <td><span asp-validation-for="ProdutoDataValidade" class="text-danger"></span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                    </div>
+                </div>
+            </form>
+        }
+    </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
