--- a/SisMEC/Views/Servicos/Create.cshtml
+++ b/SisMEC/Views/Servicos/Create.cshtml
@@ -4,61 +4,85 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+@{
+    Layout = null;
+}
 
-<h4>Servico</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ServicoDataEntrada" class="control-label"></label>
-                <input asp-for="ServicoDataEntrada" class="form-control" />
-                <span asp-validation-for="ServicoDataEntrada" class="text-danger"></span>
+<link rel="stylesheet" href="~/css/servicosmodal.css" />
+
+<div class="modal-dialog">
+    <div class="modal-content">
+        @using (Html.BeginForm())
+        {
+            <div class="modal-header">
+                <h4 class="modal-title">CADASTRAR</h4>
             </div>
-            <div class="form-group">
-                <label asp-for="ServicoDataSaida" class="control-label"></label>
-                <input asp-for="ServicoDataSaida" class="form-control" />
-                <span asp-validation-for="ServicoDataSaida" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ServicoDescricao" class="control-label"></label>
-                <input asp-for="ServicoDescricao" class="form-control" />
-                <span asp-validation-for="ServicoDescricao" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ServicoValor" class="control-label"></label>
-                <input asp-for="ServicoValor" class="form-control" />
-                <span asp-validation-for="ServicoValor" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ServicoPecas" class="control-label"></label>
-                <input asp-for="ServicoPecas" class="form-control" />
-                <span asp-validation-for="ServicoPecas" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ServicoObs" class="control-label"></label>
-                <input asp-for="ServicoObs" class="form-control" />
-                <span asp-validation-for="ServicoObs" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ServicoCompleto" /> @Html.DisplayNameFor(model => model.ServicoCompleto)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class ="form-control" asp-items="ViewBag.ClienteId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+
+            @Html.AntiForgeryToken()
+            <form asp-action="Create">
+                <div class="modal-body">
+
+
+                    <table class="table table-borderless">
+                        <tbody>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ServicoDataEntrada" class="control-label"></label></th>
+                                <td><input asp-for="ServicoDataEntrada" class="form-control" /></td>
+                                <td><span asp-validation-for="ServicoDataEntrada" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ServicoDataSaida" class="control-label"></label></th>
+                                <td><input asp-for="ServicoDataSaida" class="form-control" /></td>
+                                <td><span asp-validation-for="ServicoDataSaida" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ServicoDescricao" class="control-label"></label></th>
+                                <td><input asp-for="ServicoDescricao" class="form-control" /></td>
+                                <td><span asp-validation-for="ServicoDescricao" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ServicoValor" class="control-label"></label></th>
+                                <td><input asp-for="ServicoValor" class="form-control" /></td>
+                                <td><span asp-validation-for="ServicoValor" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ServicoPecas" class="control-label"></label></th>
+                                <td><input asp-for="ServicoPecas" class="form-control" /></td>
+                                <td><span asp-validation-for="ServicoPecas" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label asp-for="ServicoObs" class="control-label"></label></th>
+                                <td><input asp-for="ServicoObs" class="form-control" /></td>
+                                <td><span asp-validation-for="ServicoObs" class="text-danger"></span></td>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" asp-for="ServicoCompleto" /> @Html.DisplayNameFor(model => model.ServicoCompleto)
+                                    </label>
+                                </th>
+                            </tr>
+                            <tr class="form-group">
+                                <th scope="row"><label class="control-label">Cliente</label></th>
+                                <td><select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select></td>
+                            </tr>
+                        </tbody>
+                    </table>   
+                </div>
+
+                <div class="modal-footer">
+                    <div class="form-group">
+                        <input type="submit" value="Salvar" class="btn btn-primary" />
+                        <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                    </div>
+                </div>
+            </form>
+        }
     </div>
 </div>
+<script>
+    function tirar() {
+        $(".modal-backdrop").remove();
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+    }
+</script>
