--- a/SisMEC/Views/Servicos/Details.cshtml
+++ b/SisMEC/Views/Servicos/Details.cshtml
@@ -4,63 +4,61 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+@{
+    Layout = null;
+}
 
-<div>
-    <h4>Servico</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoDataEntrada)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoDataEntrada)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoDataSaida)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoDataSaida)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoDescricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoDescricao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoValor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoValor)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoPecas)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoPecas)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoObs)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoObs)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServicoCompleto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServicoCompleto)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cliente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.ClienteCPF)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ServicoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Detalhes do Cliente</h4>
+        </div>
+        <div class="modal-body">
+            <table class="table table-borderless">
+                <tbody>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ServicoDataEntrada)</th>
+                        <td> @Html.DisplayFor(model => model.ServicoDataEntrada)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ServicoDataSaida)</th>
+                        <td> @Html.DisplayFor(model => model.ServicoDataSaida)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ServicoDescricao)</th>
+                        <td>@Html.DisplayFor(model => model.ServicoDescricao)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ServicoValor)</th>
+                        <td> @Html.DisplayFor(model => model.ServicoValor)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ServicoPecas)</th>
+                        <td> @Html.DisplayFor(model => model.ServicoPecas)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row">@Html.DisplayNameFor(model => model.ServicoObs)</th>
+                        <td>@Html.DisplayFor(model => model.ServicoObs)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.ServicoCompleto)</th>
+                        <td>@Html.DisplayFor(model => model.ServicoCompleto)</td>
+                    </tr>
+                    <tr class="form-group">
+                        <th scope="row"> @Html.DisplayNameFor(model => model.Cliente)</th>
+                        <td> @Html.DisplayFor(model => model.Cliente.ClienteCPF)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="modal-footer">
+            <a class="btn btn-primary" asp-action="Index">Voltar</a>
+        </div>
+    </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+
+<script>
+    function tirar() {
+        $(".modal-backdrop").remove();
+    }
+</script>
