--- a/SisMEC/Views/Shared/_LoginPartial.cshtml
+++ b/SisMEC/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <link rel="stylesheet" href="~/css/partial.css" />
+    
     <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm" method="post">
             <button type="submit" class="nav-link text-dark">
                 SAIR : @User.Identity.Name &nbsp;
@@ -16,6 +16,8 @@ else
 {
     <ul class="nav navbar-nav navbar-left">
         <a class="nav-link text-dark" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@string.Format("{0}{1}", Context.Request.Path, Context.Request.QueryString)" style="color:black">&nbsp; Log in&nbsp;</a>
-        <a class="nav-link text-dark" asp-controller="Account" asp-action="Register" style="color:black">&nbsp; Registro&nbsp;&nbsp;&nbsp;</a>
+        <!--<a class="nav-link text-dark" asp-controller="Account" asp-action="Register" style="color:black">&nbsp; Registro&nbsp;&nbsp;&nbsp;</a>-->
     </ul>
 }
+
+<link rel="stylesheet" href="~/css/partial.css" />
