--- a/SisMEC/wwwroot/css/custom.css
+++ b/SisMEC/wwwroot/css/custom.css
@@ -1,8 +1,3 @@
-body,
-html {
-    font-family: "Roboto", sans-serif;
-}
-
 body {
     background-color:#1B1818;
 }
@@ -211,6 +206,7 @@ body {
 
 #contato {
     margin: 10px;
+    margin-right:30px;
 }
 
 #contato .email {
@@ -350,7 +346,7 @@ body {
     max-width:350px;
     background-color:white;
     border-radius:8px;
-    margin:10px;
+    margin:5px;
     padding:20px;
 }
 
