--- a/SisMEC/wwwroot/css/site.css
+++ b/SisMEC/wwwroot/css/site.css
@@ -58,7 +58,8 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: #1B1818;
 }
 
